# Nashi

./: .gitignore  CMakeLists.txt  CopyShaders.cmake  README.md  startvs.bat
app/src/: main.cpp  renderer_d3d12.cpp  renderer_gl.cpp  renderer_mtl.cpp  renderer_mtl.mm  renderer_vk.cpp
app/src/headers/: renderer.hpp  renderer_d3d12.hpp  renderer_gl.hpp  renderer_mtl.hpp  renderer_vk.hpp
app/src/shaders/: basic.frag  basic.vert
app/src/shaders/finished/: basic.vert
app/src/shaders/hlsl/: basic.vert
